<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"


        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:hint="@string/advertisment_address"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            android:textSize="14sp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray4" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:hint="@string/user_phone"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:inputType="phone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray4" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:hint="@string/price"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray4" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/white"
            android:hint="@string/detials"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            android:textSize="14sp"
            android:gravity="top"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray4" />
        <Button
            android:id="@+id/bt_add"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:text="@string/add_adversiment"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/bt_shape"
            android:layout_marginTop="40dp"
            android:layout_gravity="end"
            />
    </LinearLayout>

</ScrollView>