<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray0"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:longClickable="false"
            android:padding="13dp"
            android:src="@drawable/ic_right_arrow"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/application_commission"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"

            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/account_of_commission"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/calculation_of_commission_value"
                android:textColor="@color/gray6"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/if_the_goods_are_sold_at_a_price"
                    android:textColor="@color/gray7"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_per"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/linear_shape"
                    android:inputType="numberSigned"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/real_so"
                    android:textColor="@color/gray7"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/amount_payable"
                    android:textColor="@color/gray7"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/_0"
                    android:textColor="@color/black"

                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/real_so"
                    android:textColor="@color/gray7"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/gray7"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/site_commission_is_10_riyals"
                    android:textColor="@color/gray7"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_commission"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/_0"
                    android:textColor="@color/black"

                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/real"
                    android:textColor="@color/gray7"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
            <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/the_value_added_tax_is_0_real"
            android:textColor="@color/gray7"
            android:gravity="center_vertical"
            android:textSize="15sp"
            />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:text="@string/the_site_commission_is_1_of_the_commodity_price"
                android:textColor="@color/gray7"
                android:textSize="15sp" />
            <!--    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/vat_is_5_of_the_site_commission"
                    android:textColor="@color/gray7"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:text="@string/note_please_log_in_if_you_have_a_membership_on_the_site_even_if_you_have_a_discount_calculated_for_you"
                android:textColor="@color/gray7"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="8dp"
                android:background="@color/gray3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>