<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray1"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/bank_name"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/account_name"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/account_iban"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_account_iban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/account_number"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>
