<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"


        >


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edt_bg">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:longClickable="false"
                app:riv_border_color="@color/gray4"
                app:riv_border_width="0dp"

                />

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:longClickable="false"
                android:padding="5dp"
                android:src="@drawable/ic_upload" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_manufacture_company"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"></Spinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray7" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"></Spinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray7" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"></Spinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray7" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
android:weightSum="2"    >
  <CheckBox
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/apply_terms_and_conditions"
      android:textColor="@color/black"
      android:textSize="10sp"
      android:padding="8dp"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/terms_and_conditions1"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        />
</LinearLayout>







        <LinearLayout
            android:id="@+id/ll_continue"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:background="@drawable/bt_shape"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/continuation"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="16dp"

                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/bt_arrow"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/arrowcontinue"
                android:tint="@color/white"
                android:padding="8dp"
                />


        </LinearLayout>
    </LinearLayout>

</ScrollView>