<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp"

        >

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:longClickable="false"
            android:padding="13dp"
            android:tint="@color/white"
            android:src="@drawable/ic_right_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upgrade"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
      >

        <LinearLayout
            android:id="@+id/ll_upgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/commercial_register"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"

                />

            <FrameLayout
                android:id="@+id/fl1"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:background="@drawable/linear_shape"

                    />

                <ImageView
                    android:id="@+id/image_icon_upload"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:longClickable="false"
                    android:src="@drawable/ic_upload"
                    android:tint="@color/gray4" />

            </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/market_name"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/market_name"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray4"
                android:textSize="14sp"
                android:singleLine="true"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"

                android:layout_marginTop="5dp"
                android:background="@color/gray4"

                />
            <fragment
                android:id="@+id/fragment_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"

                />
            <Button
                android:id="@+id/bt_upgrade"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:background="@drawable/bt_shape"
                android:text="@string/upgrade"
                android:textColor="@color/white"
                android:textSize="15sp"

                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>